# task-pool

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .lgtm.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  conanfile.txt
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml  codeql-analysis.yml  template-janitor.yml
cmake_modules/: CodeCoverage.cmake
configured_files/: config.hpp.in
docs/: building.md  tutorial.md
examples/: CMakeLists.txt  README.md  conanfile.txt  one.cpp
examples/collage/: CMakeLists.txt  main.cpp
examples/image_processing/: CMakeLists.txt  main.cpp
examples/webserver/: CMakeLists.txt  main.cpp  server.cpp  server.h
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
lib/: CMakeLists.txt  config.cmake.in  task_pool.cpp
lib/public/task_pool/: api.h  fallbacks.h  pipes.h  pool.h  task_pool.h  traits.h
libs/: CMakeLists.txt
libs/task-pool/: CMakeLists.txt  task_pool.cpp  task_pool.h  task_pool_fallbacks.h
misc/docs/: coverage.html  coverage.src_task_pool.cpp.html  coverage.src_task_pool.h.html  coverage.test_tests.cpp.html
src/: CMakeLists.txt  config.hpp.in  task_pool.cpp  task_pool.h  task_pool_fallbacks.h  trait_fallbacks.h
test/: CMakeLists.txt  test_task_pool.cpp  tests.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
