cmake_minimum_required(VERSION 3.15...3.23)
find_package(task_pool REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(CLI11 CONFIG REQUIRED)
find_package(CURL CONFIG REQUIRED)
find_package(libjpeg-turbo CONFIG REQUIRED)

add_executable(example_img main.cpp)
if (UNIX)
    target_link_libraries(example_img PRIVATE pthread )
endif()
target_link_libraries(example_img PRIVATE task_pool::task_pool )
target_link_libraries(example_img PRIVATE fmt::fmt)
target_link_libraries(example_img PRIVATE libjpeg-turbo::turbojpeg-static)
target_link_libraries(example_img PRIVATE CLI11::CLI11 )